[package]
name = "example-chat-server"
version = "0.1.0"
authors = ["Jun Ryoung Ju <junryoungju@gmail.com>"]
edition = "2018"

[[bin]]
name = "example_chat_server"
path = "bin.rs"

[dependencies]
async-std = { version = "*", features = ["unstable"] }
futures = "*"
log = "*"

neqo-crypto = { tag = "v0.4.8", git = "https://github.com/mozilla/neqo" }
neqo-future = { path = "./../neqo-future/" }
simplelog = "*"