[package]
name = "neqo-future-sys"
version = "0.1.0"
authors = ["Jun Ryoung Ju <junryoungju@gmail.com>"]
edition = "2018"

[lib]
name = "neqo_future_sys"
path = "lib.rs"
crate-type = ["staticlib"]

[dependencies]
async-std = { version = "*", features = ["unstable"] }
futures = "*"
libc = "0.2"

neqo-crypto = { tag = "v0.4.8", git = "https://github.com/mozilla/neqo" }
neqo-future = { path = "./../neqo-future/" }

[profile.release]
panic = "abort"