[package]
name = "neqo-future"
version = "0.1.0"
authors = ["Jun Ryoung Ju <junryoungju@gmail.com>"]
edition = "2018"

[lib]
name = "neqo_future"
path = "lib.rs"

[dependencies]
async-std = { version = "*", features = ["unstable"] }
anyhow = "*"
futures = "*"
log = "*"

neqo-crypto = { tag = "v0.4.8", git = "https://github.com/mozilla/neqo" }
neqo-common = { tag = "v0.4.8", git = "https://github.com/mozilla/neqo" }
neqo-transport = { tag = "v0.4.8", git = "https://github.com/mozilla/neqo" }